wrapper: fix resize when show scrollbar
Using padding left and adjust the height of
header to fix it.

--- a/webapp/src/theme-pagarme/checkout/index.css
+++ b/webapp/src/theme-pagarme/checkout/index.css
@@ -14,6 +14,7 @@
 .wrapper {
   width: 90vw;
   height: 93vh;
+  padding-left: calc(100vw - 100%);
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
